--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Website</title>
+    <title>Lauri Tuominen MD PhD</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
@@ -13,6 +13,9 @@
             <a href="#publications">Publications</a>
             <a href="#projects">Projects</a>
             <a href="#funding">Funding</a>
+            <a href="#Google Scholar">https://scholar.google.com/citations?user=YDimi6EAAAAJ&hl=fi</a>
+            <a href="#Royal profile"> https://www.theroyal.ca/research/biography/dr-lauri-tuominen</a>
+           
         </nav>
     </header>
     <main>
