Changes to index

--- a/index.html
+++ b/index.html
@@ -15,20 +15,22 @@
             <a href="#funding">Funding</a>
             <a href="#Google Scholar">https://scholar.google.com/citations?user=YDimi6EAAAAJ&hl=fi</a>
             <a href="#Royal profile"> https://www.theroyal.ca/research/biography/dr-lauri-tuominen</a>
-           
         </nav>
     </header>
     <main>
         <aside>
             <img src="/img/ROH_DZ68340byMichelleValberg.jpg" alt="Your Picture">
             <div class="contact-info">
-                <p>Email: your.email@example.com</p>
-                <p>Phone: (555) 555-5555</p>
+                <p>Email: lauri tuominen at theroyal.ca</p>
+                <p>Twitter: https://twitter.com/Laurijohannes</p>
             </div>
         </aside>
         <section>
-            <h1>About Me</h1>
-            <p>An overview of what you do...</p>
+            <h1>Lauri Tuominen MD PhD</h1>
+            <p>I am a scientist at The Royal’s 
+            Institute of Mental Health Research (IMHR), affiliated with the University of Ottawa.
+            My research focuses on understaning the molecular basis of mental health disorders. 
+        </p>
         </section>
     </main>
     <script src="/js/scripts.js"></script>
