Changes to index 2

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
             <a href="#publications">Publications</a>
             <a href="#projects">Projects</a>
             <a href="#funding">Funding</a>
-            <a href="#Google Scholar">https://scholar.google.com/citations?user=YDimi6EAAAAJ&hl=fi</a>
-            <a href="#Royal profile"> https://www.theroyal.ca/research/biography/dr-lauri-tuominen</a>
+            <a href=https://scholar.google.com/citations?user=YDimi6EAAAAJ&hl=fi>Google Scholar</a>
+            <a href=https://www.theroyal.ca/research/biography/dr-lauri-tuominen>Royal Profile</a>
         </nav>
     </header>
     <main>
         <aside>
             <img src="/img/ROH_DZ68340byMichelleValberg.jpg" alt="Your Picture">
-            <div class="contact-info">
-                <p>Email: lauri tuominen at theroyal.ca</p>
-                <p>Twitter: https://twitter.com/Laurijohannes</p>
+            <div class="Contact">
+                <a href=lauri.tuominen@theroyal.ca>email</a> 
+                <a href=https://twitter.com/Laurijohannes>Twitter</a> 
             </div>
         </aside>
         <section>
