--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
         <aside>
             <img src="/img/ROH_DZ68340byMichelleValberg.jpg" alt="Your Picture">
             <div class="Contact">
-                <a href=lauri.tuominen@theroyal.ca>email</a> 
+                <a href="mailto: lauri.tuominen@theroyal.ca" >email</a> 
                 <a href=https://twitter.com/Laurijohannes>Twitter</a> 
             </div>
         </aside>
         <section>
             <h1>Lauri Tuominen MD PhD</h1>
-            <p>I am a scientist at The Royal’s 
-            Institute of Mental Health Research (IMHR), affiliated with the University of Ottawa.
-            My research focuses on understaning the molecular basis of mental health disorders. 
+            <p>I am a scientist at <a href=https://www.theroyal.ca/research>The Royal’s 
+            Institute of Mental Health Research (IMHR)</a>, affiliated with the University of Ottawa.
+            In my research, I use brain imaging to study the molecular basis of mental health disorders. 
+            My main interests include schizophrenia and transcranial magnetic stimulation.  
         </p>
         </section>
     </main>
